# Neurawkes

./: .editorconfig  .gitignore  README.md  full_dataset_by_year_2014_2023_75_percent_float_casted_date_indexed.csv  pyproject.toml
docs/: data_dictionary.md  paper_outline.md  project_overview.md
neurawkes/: README.md  generate_sequences.py  run_models.py  test_models_and_save.py  train_models.py
neurawkes/modules/: controllers.py  data_processers.py  models.py  optimizers.py  organizers.py  sequence_generators.py  testers.py  utils.py
nhp_torch/: __init__.py  utils.py
nhp_torch/baselines/: __init__.py  binned.py  shock_classifier.py  var.py
nhp_torch/cli/: evaluate.py  make_events.py  report.py  tearsheet.py  train.py
nhp_torch/config/: default.toml  io.py
nhp_torch/data/: events.py  load_csv.py  splits.py  transforms.py
nhp_torch/eval/: binary_eval.py  event_prediction.py  metrics.py  plots.py  tearsheet.py
nhp_torch/models/: intensity.py  nhp.py
nhp_torch/training/: loss.py  progress.py  trainer.py
tools/: py313_modernize.py
