[project]
name = "neurawkes"
version = "0.0.0"
description = "Neural Hawkes Process (NeurIPS 2017) research code"
readme = "neurawkes/README.md"
requires-python = ">=3.13"
license = { file = "neurawkes/LICENSE" }

# NOTE: This repo is research code built on Theano. Theano (and its forks) may not
# have wheels compatible with Python 3.13 on all platforms. We intentionally do
# not hard-pin runtime dependencies here; see neurawkes/README.md for details.

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4",
]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
# Research codebase: keep linting helpful but non-disruptive.
ignore = [
  "E402", # module-level import not at top (script-style files)
  "E501", # long lines (many doc/comments/log prints)
  "B008", # function calls in argument defaults (common in this repo)
]

[tool.ruff.lint.per-file-ignores]
"neurawkes/run_models.py" = ["F401", "F841"] # large script-style file, many unused locals/imports

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


